--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "_example",
-  "version": "0.0.0",
+  "name": "dating-app",
+  "version": "0.0.1",
   "private": true,
+  "description": "An example app with Express 4.0 and lots of other new features.",
   "scripts": {
     "start": "node ./src/server/bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "latest",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "~1.12.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "nodemailer": "^1.8.0",
+    "nodemailer-ses-transport": "^1.3.0",
+    "passport": "~0.3.0",
+    "passport-local": "~1.0.0",
+    "serve-favicon": "~2.3.0",
+    "underscore-node": "^0.1.2"
   },
   "devDependencies": {
     "browser-sync": "2.9.6",
