--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "~1.12.1",
+    "jade": "^1.11.0",
     "morgan": "~1.6.1",
     "nodemailer": "^1.8.0",
     "nodemailer-ses-transport": "^1.3.0",
