--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dating-app",
+  "name": "nodemailer-example-app",
   "version": "0.0.1",
   "private": true,
   "description": "An example app with Express 4.0 and lots of other new features.",
@@ -14,9 +14,12 @@
     "express": "~4.13.1",
     "express-session": "~1.12.1",
     "jade": "^1.11.0",
+    "mongoose": "~4.2.3",
     "morgan": "~1.6.1",
     "nodemailer": "^1.8.0",
+    "nodemailer-html-to-text": "^1.0.2",
     "nodemailer-ses-transport": "^1.3.0",
+    "nodemailer-stub-transport": "^1.0.0",
     "passport": "~0.3.0",
     "passport-local": "~1.0.0",
     "serve-favicon": "~2.3.0",
