udpate gulpfile to correctly uglify angular

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "~1.12.1",
+    "gulp-ngmin": "^0.3.0",
     "jade": "^1.11.0",
     "mongoose": "~4.2.3",
     "morgan": "~1.6.1",
